# libraria-lib

./: CMakeLists.txt  Makefile
ibpp/: _ibpp.h  database.cpp  ibase.h
src/: Book.cpp  Book.hpp  Database.cpp  Database.hpp  Main.cpp  Test.cpp  Test.hpp  Utils.cpp  Utils.hpp
